# PowerRonin

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  entry.cpp
Include/PowerRonin/: Aabb.hpp  Blob.hpp  CSharpInterop.hpp  Camera.hpp  Chrono.hpp  Collider.hpp  Components.hpp  Config.hpp  Diagnostics.hpp  EcsBase.hpp  EditorCamera.hpp  Endian.hpp  EntityMeta.hpp  Exceptions.hpp  Fence.hpp  Frustum.hpp  HybridObject.hpp  IResource.hpp  Input.hpp  Interrupt.hpp  InterruptHandler.hpp  Json.hpp  Light.hpp  ManagedAllocator.hpp  ManagedObject.hpp  Material.hpp  MathLib.hpp  MathTypes.hpp  Mesh.hpp  MeshRenderer.hpp  MessageBox.hpp  PanicRoutine.hpp  Platform.hpp  ProcessInfo.hpp  Protocol.hpp  RenderState.hpp  Resource.hpp  ResourceManager.hpp  Rigidbody.hpp  Runtime.hpp  (+9 more)
Include/PowerRonin/Core/: Entry.hpp  Installer.hpp  Kernel.hpp  Subsystem.hpp
config/: system.ini
examples/: cactus.mtl  mountain_albedo.dds  snow_albedo.dds  soldier.mtl  solider.mtl  spaceship_specular.dds  terrain.mtl
include/dce/: aabb.hpp  audio_clip.hpp  audio_source.hpp  blob.hpp  break_interrupt_handler.hpp  camera.hpp  chrono.hpp  classdb.hpp  cmddb.hpp  collider.hpp  comcollections.hpp  config.hpp  cpu_registers.hpp  csinterop.hpp  diagnostics.hpp  ecs.hpp  endian.hpp  entity_meta.hpp  env.hpp  error_dump.hpp  event_behaviour.hpp  except.hpp  fence.hpp  flycam.hpp  frustum.hpp  half.hpp  hybrid.hpp  input.hpp  interrupt.hpp  json_impl.hpp  light.hpp  managed_object.hpp  material.hpp  mathlib.hpp  mathtypes.hpp  mesh.hpp  mesh_renderer.hpp  pixelformat.hpp  procinfo.hpp  proto.hpp  (+16 more)
include/dce/core/: entry.hpp  installer.hpp  kernel.hpp  main.hpp  misc.hpp  publish.hpp  subsystem.hpp
include/power_ronin/: aabb.hpp  blob.hpp  break_interrupt_handler.hpp  camera.hpp  chrono.hpp  classdb.hpp  collider.hpp  comcollections.hpp  config.hpp  csinterop.hpp  diagnostics.hpp  ecs.hpp  endian.hpp  entity_meta.hpp  env.hpp  error_dump.hpp  event_behaviour.hpp  except.hpp  fence.hpp  flycam.hpp  frustum.hpp  half.hpp  hybrid.hpp  input.hpp  interrupt.hpp  json_impl.hpp  light.hpp  managed_object.hpp  material.hpp  mathlib.hpp  mathtypes.hpp  mesh.hpp  mesh_renderer.hpp  msgbox.hpp  panic_routine.hpp  pixelformat.hpp  procinfo.hpp  proto.hpp  renderer_data.hpp  resource.hpp  (+12 more)
include/power_ronin/core/: entry.hpp  installer.hpp  kernel.hpp  subsystem.hpp
meshes/common/: platform.mtl
meshes/test/: test_scene.mtl
retail/config/: display.ini  graphics.ini  overlay.ini
retail/examples/: cactus_albedo.dds  cactus_normal.dds  cliff_albedo.dds  cliff_height.dds  cliff_normal.dds  mountain_normal.dds  snow_normal.dds  soil_albedo.dds  soil_normal.dds  soldier_normal.dds  solider_albedo.dds  spaceship.mtl  spaceship_albedo.dds  spaceship_emission.dds  spaceship_normal.dds  stove_albedo.dds  stove_normal.dds
retail/runtime/: dreamcast.xml
retail/shaders/: cli commands.txt  shaderlib.shader
retail/shaders/src/: common.shader
retail/textures/common/: checkerboard.dds  tiles.dds
runtime/: PowerRonin.xml  dreamcast.xml  power_ronin.xml
scripts/: deploy_editor.lua
scripts/DreamcastScriptingRuntime/: .editorconfig  Core.cs  DreamcastScriptingRuntime.csproj  DreamcastScriptingRuntime.sln  Entry.cs  Protocol.cs
scripts/DreamcastScriptingRuntime/Core/: CallToNativeRuntime.cs  Chrono.cs  Command.cs  (+16 more)
scripts/dreamcast/: Protocol.cs  dreamcast.sln
shaders/: compile_all.py  core.shader  d3d11 cli shaderc ps.txt  d3d11 cli shaderc vs.txt
shaders/src/: fs_mesh.shader  vs_mesh.shader
source/: aabb.cpp  audio_clip.cpp  audio_clip_runtime.cpp  audio_source.cpp  blob.cpp  break_interrupt_handler.cpp  camera.cpp  classdb.cpp  cmddb.cpp  config.cpp  cpu_registers.cpp  error_dump.cpp  event_behaviour.cpp  except.cpp  fence.cpp  flycam.cpp  flycam.hpp  frustum.cpp  half.cpp  hybrid.cpp  input.cpp  interrupt.cpp  managed_object.cpp  material.cpp  material_runtime.cpp  mesh.cpp  mesh_runtime.cpp  msgbox.cpp  panic_routine.cpp  pixelformat.cpp  procinfo.cpp  proto.cpp  renderer.cpp  resource.cpp  resource_manager.cpp  runtime.cpp  scenery.cpp  serial.cpp  shader.cpp  shader_runtime.cpp  (+13 more)
source/audio/: audio.cpp  audio.hpp  audio_headers.hpp
source/core/: core.cpp  core.hpp  entry.cpp  installer.cpp  kernel.cpp  misc.cpp  subsystem.cpp
source/gui/: dockspace.cpp  dockspace.hpp  editor.cpp  editor.hpp  file_dialog_tool.cpp  file_dialog_tool.hpp  font_headers.hpp  gui.cpp  gui.hpp  gui_headers.hpp  imgui_headers.hpp  ram_editor.hpp  scroll_roll_buffer.cpp  scroll_roll_buffer.hpp  terminal.cpp  terminal.hpp  theme.cpp  theme.hpp  utils.hpp  window_names.hpp
source/physics/: physics.cpp  physics.hpp  physics_headers.hpp
source/platform/: callback_hooks.cpp  callback_hooks.hpp  glfw_headers.hpp  imgui_input.cpp  imgui_input.hpp  input.cpp  input.hpp  platform.cpp  platform.hpp  platform_headers.hpp  splash.cpp  splash.hpp  util.cpp  util.hpp
source/renderer/: bgfx_headers.hpp  buffers.hpp  camera_matrices.cpp  camera_matrices.hpp  clocks.cpp  clocks.hpp  embedded_shaders.cpp  embedded_shaders.hpp  gl_headers.hpp  gpu.cpp  gpu.hpp  gui_renderer.cpp  gui_renderer.hpp  imgui_renderer.cpp  imgui_renderer.hpp  ishader.cpp  ishader.hpp  program_loader.cpp  program_loader.hpp  renderer.cpp  renderer.hpp  shader_bucket.cpp  shader_bucket.hpp  shared_per_frame_uniform.cpp  shared_per_frame_uniform.hpp  shared_uniforms.cpp  shared_uniforms.hpp  stats.cpp  stats.hpp  uniform.cpp  uniform.hpp  utils.cpp  utils.hpp  views.hpp
source/scripting/: assembly.cpp  assembly.hpp  class.cpp  class.hpp  cstypes.hpp  dreamcast.dll.hpp  environment.cpp  environment.hpp  helpers.cpp  helpers.hpp  instance_class.cpp  instance_class.hpp  internal_calls.cpp  internal_calls.hpp  member_method.cpp  member_method.hpp  mono_headers.hpp  native_config.cpp  native_config.hpp  power_ronin.dll.hpp  scripting.cpp  scripting.hpp  static_class.cpp  static_class.hpp  static_method.cpp  static_method.hpp
text/: unicode.txt
textures/common/: checkerboard.dds  invalid.dds
textures/skybox/: city.dds  default.dds  sunset.dds
(+1392 files in other folders)
