cmake_minimum_required (VERSION 3.8)

message("Initializing PowerRoninSDK CMake")

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
project ("PowerRoninSDK" CXX C ASM)

message("Com: ${CMAKE_CXX_COMPILER_ID}")

# -march=native -mavx
if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
    SET(COVERAGE_COMPILE_FLAGS "-msse -msse2 -msse3 -mssse3 -msse4.1 -msse4.2 -Ofast -MT")
    SET(COVERAGE_LINK_FLAGS    "-flto -MT")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${COVERAGE_COMPILE_FLAGS}")
    SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${COVERAGE_COMPILE_FLAGS}")
    SET(CMAKE_STATIC_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} ${COVERAGE_LINK_FLAGS}")
    SET(CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} ${COVERAGE_LINK_FLAGS}")
endif()

add_library(
    "power_ronin_lib" STATIC
    "include/power_ronin/core/kernel.hpp"
    "source/core/kernel.cpp"
    "include/power_ronin/xorshift.hpp"
    "source/xorshift.cpp"
    "source/platform/platform.cpp"
    "include/power_ronin/core/installer.hpp" 
    "source/core/installer.cpp" 
    "include/power_ronin/env.hpp" 
    "include/power_ronin/classdb.hpp" 
    "source/classdb.cpp"
    "include/power_ronin/pixelformat.hpp" 
    "source/pixelformat.cpp" 
    "include/power_ronin/half.hpp" 
    "include/power_ronin/serial.hpp" 
    "source/serial.cpp" 
    "include/power_ronin/json_impl.hpp" 
    "source/renderer/renderer.hpp" 
    "source/renderer/renderer.cpp" 
    "include/power_ronin/config.hpp" 
    "include/power_ronin/runtime.hpp" 
    "include/power_ronin/proto.hpp" 
    "source/proto.cpp" 
    "include/power_ronin/core/subsystem.hpp" 
    "source/core/subsystem.cpp" 
    "source/runtime.cpp" 
    "source/renderer/gui_renderer.hpp" 
    "source/renderer/gui_renderer.cpp" 
    "source/renderer/gl_headers.hpp" 
    "source/gui/font_headers.hpp" 
    "source/time_utils.cpp" 
    "source/renderer/utils.hpp"  
    "source/gui/gui.hpp" 
    "source/gui/gui.cpp" 
    "source/gui/theme.hpp" 
    "source/gui/theme.cpp" 
    "source/platform/input.hpp" 
    "source/platform/input.cpp" 
    "source/platform/platform_headers.hpp"
    "source/platform/callback_hooks.hpp" 
    "source/platform/callback_hooks.cpp"
    "source/gui/terminal.hpp"
    "source/gui/terminal.cpp" 
    "include/power_ronin/core/entry.hpp"
    "source/terminal_sink.hpp"    
    "source/half.cpp"   
    "source/texture.cpp" 
    "include/power_ronin/texture.hpp" 
    "source/gui/utils.hpp"
    "source/renderer/utils.cpp"
    "include/power_ronin/resource_manager.hpp" 
    "source/resource_manager.cpp"  
    "source/gui/widgets/resource_viewer.hpp" 
    "source/gui/widgets/resource_viewer.cpp" 
    "include/power_ronin/event_behaviour.hpp" 
    "source/event_behaviour.cpp" 
    "include/power_ronin/ecs.hpp" 
    "include/power_ronin/scenery.hpp" 
    "source/scenery.cpp" 
    "include/power_ronin/mesh.hpp"
    "source/mesh.cpp" 
    "source/gui/gui_headers.hpp"
    "include/power_ronin/mathlib.hpp" 
    "source/gui/widgets/profiler.hpp"
    "source/gui/widgets/profiler.cpp" 
    "include/power_ronin/diagnostics.hpp" 
    "source/gui/scroll_roll_buffer.hpp" 
    "source/gui/scroll_roll_buffer.cpp" 
    "source/renderer/shader_bucket.hpp" 
    "source/shader.cpp" 
    "include/power_ronin/blob.hpp"
    "source/blob.cpp"  
    "source/gui/file_dialog_tool.hpp"
    "source/gui/file_dialog_tool.cpp" 
    "source/gui/widgets/ram_editor.hpp" 
    "include/power_ronin/flycam.hpp" 
    "include/power_ronin/chrono.hpp" 
    "source/sysclock.hpp" 
    "source/sysclock.cpp" 
    "include/power_ronin/camera.hpp" 
    "include/power_ronin/transform.hpp" 
    "include/power_ronin/mesh_renderer.hpp" 
    "source/renderer/gpu.hpp"
    "source/renderer/gpu.cpp" 
    "source/renderer/stats.hpp" 
    "source/renderer/stats.cpp" 
    "source/transform.cpp" 
    "source/renderer/clocks.hpp" 
    "source/renderer/clocks.cpp" 
    "source/texture_runtime.cpp" 
    "source/mesh_runtime.cpp" 
    "source/shader_runtime.cpp" 
    "include/power_ronin/entity_meta.hpp" 
    "include/power_ronin/comcollections.hpp" 
    "source/gui/editor.hpp" 
    "source/gui/editor.cpp" 
    "source/gui/widgets/hierarchy.hpp" 
    "source/gui/widgets/hierarchy.cpp"
    "source/gui/widgets/inspector.hpp"
    "source/gui/widgets/inspector.cpp" 
    "include/power_ronin/input.hpp" 
    "source/input.cpp" 
    "source/physics/physics.hpp" 
    "source/physics/physics.cpp" 
    "include/power_ronin/collider.hpp" 
    "include/power_ronin/rigidbody.hpp" 
    "source/physics/physics_headers.hpp"
    "source/flycam.cpp" 
    "include/power_ronin/light.hpp" 
    "include/power_ronin/material.hpp" 
    "source/renderer/shaders/unlit_textured.hpp" 
    "source/renderer/shaders/unlit_textured.cpp"
    "source/renderer/shaders/diffuse.hpp"
    "source/renderer/shaders/diffuse.cpp" 
    "source/renderer/shaders/skybox.hpp"
    "source/renderer/shaders/skybox.cpp"
    "source/renderer/shaders/bumped_diffuse.hpp"
    "source/renderer/shaders/bumped_diffuse.cpp" 
    "source/renderer/shader_bucket.hpp" 
    "source/renderer/program_loader.hpp" 
    "source/renderer/program_loader.cpp" 
    "source/renderer/ishader.hpp"  
    "source/renderer/shader_bucket.cpp" 
    "include/power_ronin/sun.hpp" 
    "source/sun.cpp" 
    "source/gui/widgets/config_editor.hpp"
    "source/gui/widgets/config_editor.cpp" 
    "include/power_ronin/time_utils.hpp" 
    "source/time_utils.cpp" 
    "source/scripting/scripting.hpp"
    "source/scripting/scripting.cpp" 
    "include/power_ronin/variant_visit_overloader.hpp" 
    "source/renderer/views.hpp" 
    "source/material_runtime.cpp"
    "source/material.cpp"
    "source/platform/util.hpp"
    "source/platform/util.cpp" 
    "source/audio/audio.hpp"
    "source/audio/audio.cpp"
    "source/audio/audio_headers.hpp"
    "source/gui/window_names.hpp" 
    "include/power_ronin/fence.hpp" 
    "source/fence.cpp" 
    "include/power_ronin/except.hpp" 
    "source/except.cpp" 
    "include/power_ronin/procinfo.hpp"
    "source/procinfo.cpp" 
    "include/power_ronin/interrupt.hpp"
    "source/interrupt.cpp" 
    "include/power_ronin/error_dump.hpp"
    "source/error_dump.cpp" 
    "include/power_ronin/break_interrupt_handler.hpp" 
    "source/break_interrupt_handler.cpp" 
    "include/power_ronin/renderer_data.hpp" 
    "source/renderer.cpp"
    "source/gui/widgets/scenery_viewer.hpp"
    "source/gui/widgets/scenery_viewer.cpp" 
    "source/scripting/mono_headers.hpp" 
    "source/scripting/internal_calls.cpp" 
    "source/scripting/helpers.hpp" 
    "source/scripting/helpers.cpp" 
    "source/scripting/dreamcast.dll.hpp" 
    "source/scripting/assembly.hpp" 
    "source/scripting/assembly.cpp" 
    "source/scripting/environment.hpp" 
    "source/scripting/environment.cpp" 
    "source/scripting/static_class.hpp"
    "source/scripting/static_class.cpp" 
    "source/scripting/static_method.hpp"
    "source/scripting/static_method.cpp" 
    "source/scripting/member_method.hpp"
    "source/scripting/member_method.cpp"
    "source/scripting/instance_class.hpp"
    "source/scripting/instance_class.cpp" 
     
    "include/power_ronin/csinterop.hpp" 
      
    "source/audio/audio_engine_core/Common/AkDefaultLowLevelIODispatcher.cpp" 
    "source/audio/audio_engine_core/Common/AkDefaultLowLevelIODispatcher.h" 
    "source/audio/audio_engine_core/Common/AkFileLocationBase.cpp" 
    "source/audio/audio_engine_core/Common/AkFileLocationBase.h" 
    "source/audio/audio_engine_core/Common/AkFilePackage.cpp" 
    "source/audio/audio_engine_core/Common/AkFilePackage.h" 
    "source/audio/audio_engine_core/Common/AkFilePackageLowLevelIO.h" 
    "source/audio/audio_engine_core/Common/AkFilePackageLUT.cpp" 
    "source/audio/audio_engine_core/Common/AkFilePackageLUT.h" 
    "source/audio/audio_engine_core/Common/AkMultipleFileLocation.cpp" 
    "source/audio/audio_engine_core/Common/AkMultipleFileLocation.h" 
   #"source/audio/audio_engine_core/POSIX/AkDefaultIOHookBlocking.cpp" 
   #"source/audio/audio_engine_core/POSIX/AkDefaultIOHookBlocking.h" 
   #"source/audio/audio_engine_core/POSIX/AkDefaultIOHookDeferred.cpp" 
   #"source/audio/audio_engine_core/POSIX/AkDefaultIOHookDeferred.h" 
   #"source/audio/audio_engine_core/POSIX/AkFileHelpers.h" 
   #"source/audio/audio_engine_core/POSIX/AkFilePackageLowLevelIOBlocking.h" 
   #"source/audio/audio_engine_core/POSIX/AkFilePackageLowLevelIODeferred.h" 
    "source/audio/audio_engine_core/Win32/AkDefaultIOHookBlocking.cpp" 
    "source/audio/audio_engine_core/Win32/AkDefaultIOHookBlocking.h" 
    "source/audio/audio_engine_core/Win32/AkDefaultIOHookDeferred.cpp" 
    "source/audio/audio_engine_core/Win32/AkDefaultIOHookDeferred.h" 
    "source/audio/audio_engine_core/Win32/AkFileHelpers.h" 
    "source/audio/audio_engine_core/Win32/AkFilePackageLowLevelIOBlocking.h" 
    "source/audio/audio_engine_core/Win32/AkFilePackageLowLevelIODeferred.h" 
    "source/renderer/uniform.hpp"
    "source/renderer/shared_uniforms.hpp" 
    "source/renderer/shared_uniforms.cpp"
    "source/renderer/uniform.cpp" 
    "include/power_ronin/aabb.hpp"
    "include/power_ronin/frustum.hpp" 
    "source/aabb.cpp" 
    "source/frustum.cpp" 
    "include/power_ronin/hybrid.hpp"  
    "source/hybrid.cpp" 
    "include/power_ronin/managed_object.hpp" 
    "source/managed_object.cpp")

include("extern/CMakeLists.txt")

set_property(TARGET "power_ronin_lib" PROPERTY "MSVC_RUNTIME_LIBRARY" "MultiThreaded")

add_executable("power_ronin" WIN32 "entry.cpp")
target_link_libraries("power_ronin" "power_ronin_lib")

set_property(TARGET "power_ronin" PROPERTY "MSVC_RUNTIME_LIBRARY" "MultiThreaded")
